# googlemockexample

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  run.sh
src/: cmake.h  main.cpp  mult.cpp  mult.h
src/test/: gmock.cpp  main.cpp  mult.cpp
